--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "truffle-plugin-verify": "^0.5.7"
   }
 }
