minimal project compiling

--- a/env.sample
+++ b/env.sample
@@ -1,6 +1,6 @@
-export ALCHEMY_KEY=""
-export MNEMONIC=""
-export OWNER_ADDRESS=""
-export NFT_CONTRACT_ADDRESS=""
-export FACTORY_CONTRACT_ADDRESS=""
+export ALCHEMY_KEY="ALCHEMY KEY HERE"
+export MNEMONIC="SEED_PHRASE_FOR_OWNER_WALLET"
+export OWNER_ADDRESS="0xWALLET_ADDRESS_HERE"
+export NFT_CONTRACT_ADDRESS="IF IT ALREADY EXISTS (EG FOR VERIFICATION)"
+export FACTORY_CONTRACT_ADDRESS="IF ONE EXISTS (IF YOU'RE NOT SURE, IT DOESN'T)"
 export NETWORK="rinkeby"
